# isotarp

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Justfile  README.md  codecov.yml  release-plz.toml
.github/workflows/: binaries.yml  test.yml
src/: cli.rs  coverage.rs  lib.rs  main.rs  resolve.rs  types.rs  utils.rs
src/cli/: commands.rs
src/coverage/: analysis.rs  tarpaulin.rs
src/types/: errors.rs  models.rs
src/utils/: cleanup.rs  io.rs  paths.rs  pipeline.rs  target_symlink.rs
tests/: cli.rs  commands.rs  integration_tests.rs  pipeline.rs
tests/fixtures/demolib/: .gitignore  Cargo.toml  README.md  isotarp-analysis.json
tests/fixtures/demolib/isotarp-output/test_foo/: tarpaulin-report.json
tests/fixtures/demolib/isotarp-output/tests/test_foo/: tarpaulin-report.json
tests/fixtures/demolib/isotarp-output/tests/test_not_bar/: tarpaulin-report.json
tests/fixtures/demolib/src/: functions.rs  lib.rs
