[dependencies]
clap = {version = "4.5.37", features = ["derive"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
thiserror = "2.0.12"

[package]
name = "isotarp"
version = "0.0.1"
edition = "2024"
authors = ["Louis Maddox <louismmx@gmail.com>"]
rust-version = "1.86.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lmmx/isotarp"
description = "Identify which tests provide code coverage of which lines, uniquness, and redundancy"
keywords = ["isotarp", "tarpaulin", "testing", "coverage"]
categories = ["development-tools", "testing"]
